// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cancelModifyLesson should not have payload 1`] = `
Object {
  "payload": null,
  "type": "CANCEL_MODIFY_LESSON",
}
`;

exports[`changeLesson should return updated information to change lesson 1`] = `
Object {
  "payload": Object {
    "classNo": "1",
    "lessonType": "Recitation",
    "moduleCode": "CS1010S",
    "semester": 1,
  },
  "type": "CHANGE_LESSON",
}
`;

exports[`modifyLesson should return lesson payload 1`] = `
Object {
  "payload": Object {
    "activeLesson": Object {
      "ClassNo": "1",
      "DayText": "Wednesday",
      "EndTime": "1200",
      "LessonType": "Lecture",
      "ModuleCode": "CS1010S",
      "StartTime": "1000",
      "Venue": "LT26",
      "WeekText": "Every Week",
    },
  },
  "type": "MODIFY_LESSON",
}
`;

exports[`removeLesson should return information to remove module 1`] = `
Object {
  "payload": Object {
    "moduleCode": "CS1010",
    "semester": 1,
  },
  "type": "REMOVE_MODULE",
}
`;
